Fixed dark mode contrast error

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,9 +25,9 @@
 <body>
     <header>
         <div class="small-header">
-            <img src="images/logo.webp" alt="Nampa Commerce Logo">
+            <img src="images/logo.webp" alt="Nampa Chamber of Commerce Logo">
             <h1>Nampa Chamber of Commerce</h1>
-            <button id="menu" aria-label="Menu"></button>
+            <button class="menu" aria-label="Menu"></button>
             <label class="switch" aria-label="toggle">
                 <input type="checkbox">
                 <span class="slider round"></span>
@@ -47,12 +47,12 @@
             <button id="gridview">Grid View</button>
             <button id="listview">List View</button>
         </div>
-        <div id="cards"></div>
-        <div id="list"></div>
+        <div class="cards"></div>
+        <div class="list"></div>
     </main>
 
     <footer>
-        <img src="images/logo.webp" alt="Nampa Commerce Logo">
+        <img src="images/logo.webp" alt="Nampa Chamber of Commerce Logo">
         <div class="contact-info">
             <p class="site-name">Nampa Chamber of Commerce</p>
             <p>
@@ -62,19 +62,18 @@
             </p>
         </div>
         <div class="footer-info">
-            <p>©<span id="currentYear"></span> Nampa Chamber</p>
+            <p>©<span class="currentYear"></span> Nampa Chamber</p>
             <p class="footer-break"> | </p>
             <p>Jennifer Weber</p>
             <p class="footer-break"> | </p>
             <p>WDD 230 Project</p>
             <p class="footer-break"> | </p>
-            <p id="lastModified"></p>
+            <p class="lastModified"></p>
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/dark-mode.js"></script>
-    <script src="scripts/windchill.js"></script>
     <script src="scripts/directory.js"></script>
 </body>
 
