--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,9 +28,9 @@
     </div>
     <header>
         <div class="small-header">
-            <img src="images/logo.webp" alt="Nampa Commerce Logo">
+            <img src="images/logo.webp" alt="Nampa Chamber of Commerce Logo">
             <h1>Nampa Chamber of Commerce</h1>
-            <button id="menu" aria-label="Menu"></button>
+            <button class="menu" aria-label="Menu"></button>
             <label class="switch" aria-label="toggle">
                 <input type="checkbox">
                 <span class="slider round"></span>
@@ -54,7 +54,7 @@
         <div class="site-content">
             <section class="spotlights">
                 <h2>Member Spotlights</h2>
-                <div id="cards"></div>
+                <div class="cards"></div>
             </section>
             <section class="events">
                 <h2>Events</h2>
@@ -98,7 +98,7 @@
         </div>
     </main>
     <footer>
-        <img src="images/logo.webp" alt="Nampa Commerce Logo">
+        <img src="images/logo.webp" alt="Nampa Chamber of Commerce Logo">
         <div class="contact-info">
             <p class="site-name">Nampa Chamber of Commerce</p>
             <p>
@@ -108,22 +108,20 @@
             </p>
         </div>
         <div class="footer-info">
-            <p>©<span id="currentYear"></span> Nampa Chamber</p>
+            <p>©<span class="currentYear"></span> Nampa Chamber</p>
             <p class="footer-break"> | </p>
             <p>Jennifer Weber</p>
             <p class="footer-break"> | </p>
             <p>WDD 230 Project</p>
             <p class="footer-break"> | </p>
-            <p id="lastModified"></p>
+            <p class="lastModified"></p>
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/dark-mode.js"></script>
-    <script src="scripts/windchill.js"></script>
     <script src="scripts/weather.js"></script>
     <script src="scripts/banner.js"></script>
-    <!-- <script src="scripts/directory.js"></script> -->
     <script src="scripts/spotlights.js"></script>
 </body>
 
