--- a/chamber/join.html
+++ b/chamber/join.html
@@ -26,9 +26,9 @@
 <body>
     <header>
         <div class="small-header">
-            <img src="images/logo.webp" alt="Nampa Commerce Logo">
+            <img src="images/logo.webp" alt="Nampa Commerce of Commerce Logo">
             <h1>Nampa Chamber of Commerce</h1>
-            <button id="menu" aria-label="Menu"></button>
+            <button class="menu" aria-label="Menu"></button>
             <label class="switch" aria-label="toggle">
                 <input type="checkbox">
                 <span class="slider round"></span>
@@ -43,7 +43,7 @@
     </header>
     <main class="join">
         <form id="join-form" method="get" action="thankyou.html">
-            <fieldset id="contact-info">
+            <fieldset id="user-info">
                 <legend>Applicant Information</legend>
                 <label for="fname">First Name:</label><br>
                 <input type="text" id="fname" name="fname" required><br>
@@ -154,7 +154,7 @@
 
     </main>
     <footer>
-        <img src="images/logo.webp" alt="Nampa Commerce Logo">
+        <img src="images/logo.webp" alt="Nampa Chamber of Commerce Logo">
         <div class="contact-info">
             <p class="site-name">Nampa Chamber of Commerce</p>
             <p>
@@ -164,13 +164,13 @@
             </p>
         </div>
         <div class="footer-info">
-            <p>©<span id="currentYear"></span> Nampa Chamber</p>
+            <p>©<span class="currentYear"></span> Nampa Chamber</p>
             <p class="footer-break"> | </p>
             <p>Jennifer Weber</p>
             <p class="footer-break"> | </p>
             <p>WDD 230 Project</p>
             <p class="footer-break"> | </p>
-            <p id="lastModified"></p>
+            <p class="lastModified"></p>
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
