--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -24,9 +24,9 @@
 <body>
     <header>
         <div class="small-header">
-            <img src="images/logo.webp" alt="Nampa Commerce Logo">
+            <img src="images/logo.webp" alt="Nampa Chamber of Commerce Logo">
             <h1>Nampa Chamber of Commerce</h1>
-            <button id="menu" aria-label="Menu"></button>
+            <button class="menu" aria-label="Menu"></button>
             <label class="switch" aria-label="toggle">
                 <input type="checkbox">
                 <span class="slider round"></span>
@@ -43,7 +43,7 @@
         <h2>Thank you for applying to the Nampa Chamber of Commerce!</h2>
     </main>
     <footer>
-        <img src="images/logo.webp" alt="Nampa Commerce Logo">
+        <img src="images/logo.webp" alt="Nampa Commerce of Commerce Logo">
         <div class="contact-info">
             <p class="site-name">Nampa Chamber of Commerce</p>
             <p>
@@ -53,13 +53,13 @@
             </p>
         </div>
         <div class="footer-info">
-            <p>©<span id="currentYear"></span> Nampa Chamber</p>
+            <p>©<span class="currentYear"></span> Nampa Chamber</p>
             <p class="footer-break"> | </p>
             <p>Jennifer Weber</p>
             <p class="footer-break"> | </p>
             <p>WDD 230 Project</p>
             <p class="footer-break"> | </p>
-            <p id="lastModified"></p>
+            <p class="lastModified"></p>
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
