--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,7 +34,7 @@
         </div>
         <nav>
             <a rel="home" href="index.html">Home</a>
-            <a rel="discover" href="#">Discover</a>
+            <a rel="discover" href="#" class="active">Discover</a>
             <a rel="directory" href="directory.html">Directory</a>
             <a rel="join" href="join.html">Join</a>
         </nav>
@@ -100,9 +100,9 @@
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
-    <script src="scripts/responsive-menu.js"></script>
-    <script src="scripts/dark-mode.js"></script>
-    <script src="scripts/last-visit.js"></script>
+    <script src="scripts/responsivemenu.js"></script>
+    <script src="scripts/darkmode.js"></script>
+    <script src="scripts/lastvisit.js"></script>
 </body>
 
 </html>
