--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,7 +37,7 @@
             </label>
         </div>
         <nav>
-            <a rel="home" href="#">Home</a>
+            <a rel="home" href="#" class="active">Home</a>
             <a rel="discover" href="discover.html">Discover</a>
             <a rel="directory" href="directory.html">Directory</a>
             <a rel="join" href="join.html">Join</a>
@@ -118,8 +118,8 @@
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
-    <script src="scripts/responsive-menu.js"></script>
-    <script src="scripts/dark-mode.js"></script>
+    <script src="scripts/responsivemenu.js"></script>
+    <script src="scripts/darkmode.js"></script>
     <script src="scripts/weather.js"></script>
     <script src="scripts/banner.js"></script>
     <script src="scripts/spotlights.js"></script>
