--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -36,7 +36,7 @@
         <nav>
             <a rel="home" href="index.html">Home</a>
             <a rel="discover" href="discover.html">Discover</a>
-            <a rel="directory" href="#">Directory</a>
+            <a rel="directory" href="#" class="active">Directory</a>
             <a rel="join" href="join.html">Join</a>
         </nav>
     </header>
@@ -72,8 +72,8 @@
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
-    <script src="scripts/responsive-menu.js"></script>
-    <script src="scripts/dark-mode.js"></script>
+    <script src="scripts/responsivemenu.js"></script>
+    <script src="scripts/darkmode.js"></script>
     <script src="scripts/directory.js"></script>
 </body>
 
