--- a/chamber/join.html
+++ b/chamber/join.html
@@ -38,7 +38,7 @@
             <a rel="home" href="index.html">Home</a>
             <a rel="discover" href="discover.html">Discover</a>
             <a rel="directory" href="directory.html">Directory</a>
-            <a rel="join" href="#">Join</a>
+            <a rel="join" href="#" class="active">Join</a>
         </nav>
     </header>
     <main class="join">
@@ -174,9 +174,9 @@
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
-    <script src="scripts/responsive-menu.js"></script>
-    <script src="scripts/dark-mode.js"></script>
-    <script src="scripts/time-stamp.js"></script>
+    <script src="scripts/responsivemenu.js"></script>
+    <script src="scripts/darkmode.js"></script>
+    <script src="scripts/timestamp.js"></script>
     <script src="scripts/regex.js"></script>
 </body>
 
