--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -63,8 +63,8 @@
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
-    <script src="scripts/responsive-menu.js"></script>
-    <script src="scripts/dark-mode.js"></script>
+    <script src="scripts/responsivemenu.js"></script>
+    <script src="scripts/darkmode.js"></script>
 </body>
 
 </html>
