--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -64,17 +64,18 @@
         </div>
         <div class="right-content">
             <div class="local-photos">
-                <img src="images/nampa-sign.webp" alt="Nampa Welcome Sign" loading="lazy">
+                <img src="images/nampa-sign.webp" alt="Nampa Welcome Sign" loading="lazy" media="(max-width: 800px)">
                 <p>Nampa Welcome sign</p>
-                <img src="images/nampa-depot.webp" alt="Nampa Train Depot" loading="lazy">
+                <img src=" images/nampa-depot.webp" alt="Nampa Train Depot" loading="lazy" media="(max-width: 800px)">
                 <p>Nampa Train Depot</p>
-                <img src="images/nampa-arcade.webp" alt="Jeremy's Downtown Arcade" loading="lazy">
+                <img src="images/nampa-arcade.webp" alt="Jeremy's Downtown Arcade" loading="lazy"
+                    media="(max-width: 800px)">
                 <p>Jeremy's Downtown Arcade</p>
-                <img src="images/reel-theater.webp" alt="Reel Theather" loading="lazy">
+                <img src="images/reel-theater.webp" alt="Reel Theather" loading="lazy" media="(max-width: 800px)">
                 <p>Reel Theather</p>
-                <img src="images/roaring-springs.webp" alt="Roaring Springs" loading="lazy">
+                <img src="images/roaring-springs.webp" alt="Roaring Springs" loading="lazy" media="(max-width: 800px)">
                 <p>Roaring Springs</p>
-                <img src="images/wahooz.webp" alt="Wahooz" loading="lazy">
+                <img src="images/wahooz.webp" alt="Wahooz" loading="lazy" media="(max-width: 800px)">
                 <p>Wahooz</p>
             </div>
         </div>
