--- a/chamber/join.html
+++ b/chamber/join.html
@@ -61,9 +61,8 @@
                 <input type="text" id="business" name="business" required><br>
                 <label for="position-title">Title/Position:</label><br>
                 <input type="text" id="position-title" name="position-title" required><br>
-                <label for="business-desc">Business/Organization Description
-                    <textarea id="business-desc" name="business-desc"></textarea>
-                </label><br>
+                <label for="business-desc">Business/Organization Description:</label><br>
+                <textarea id="business-desc" name="business-desc"></textarea><br>
                 <label for="benefit-level">Membership Level</label><br>
                 <select id="benefit-level" name="benefit-level">
                     <option value="" selected disabled hidden>Select</option>
