Added content to discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -61,6 +61,42 @@
                 <p>Randy Haverfield</p>
                 <p>Sebastian Griffin</p>
             </div>
+            <div class="event-list">
+                <h2>Events</h2>
+                <h3>Ribbon Cutting - Pyrrhic Indoor Sports</h3>
+                <p>📅 July 10, 2024 | 🕔 3:00 PM - 4:00 PM<br>
+                    Join us in welcoming Pyrrhic to Nampa! Their outdoor location in Caldwell has entertained paintball
+                    and airsoft enthusiasts for years. Now, at the former Reel Theater location in Nampa, their 22,500
+                    square foot indoor facility includes Airsoft, Nerf, Gel Blasters, Laser Tag, and Virtual Reality.
+                </p>
+                <h3>Business & Boots</h3>
+                <p>📅 July 19, 2024 | 🕔 4:00 PM - 6:00 PM<br>
+                    Evening networking and fun! Join us for this re-branded Networking at Night event presented by the
+                    Snake River Stampede Rodeo! Business & Boots will be held at the Idaho Horse Park Sports Center,
+                    where this event will be a part of Stampede Cowboy Christmas. In addition to networking with other
+                    Chamber members, you'll experience shopping, cowboy poetry, drinks, and appetizers.
+                </p>
+                <h3>Join us for the Taste of Idaho</h3>
+                <p>📅 September 10, 2024 | 🕔 5:00 PM - 8:00 PM<br>
+                    The Nampa Chamber of Commerce invites you to experience the Taste of Idaho! Save the date for
+                    September 10, 2024, and join us as we celebrate the harvest. Come and enjoy live music and a full
+                    Idaho-inspired menu prepared by local favorites.
+                </p>
+                <h3>Business & Breakfast</h3>
+                <p>📅 September 12, 2024 | 🕔 7:30 AM - 8:30 AM<br>
+                    Join us for our Business & Breakfast series. Our speaker sponsor will share "What You Didn't Know
+                    That You Need To Know" as well as our infamous legal and business tips. Business & Breakfast also
+                    features our fan-favorite 2.3-second introductions around the room!
+                </p>
+                <h3>October Luncheon</h3>
+                <p>📅 October 16, 2024 | 🕔 11:30 AM - 1:00 PM<br>
+                    Monthly luncheons hosted by the Nampa Chamber provide an excellent opportunity for our active
+                    business community to unite for informative presentations, valuable discussions, and networking.
+                    Often selling out, our luncheons feature panel discussions, news on important current topics, and
+                    updates on local issues. With an average turnout of over 300 guests, attending these events
+                    guarantees an excellent opportunity for your organization to participate in community development.
+                </p>
+            </div>
         </div>
         <div class="right-content">
             <div class="local-photos">
