Fixing HTML error

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -100,17 +100,17 @@
         </div>
         <div class="right-content">
             <div class="local-photos">
-                <img src="images/nampa-sign.webp" alt="Nampa Welcome Sign" loading="lazy" height="800px">
+                <img src="images/nampa-sign.webp" alt="Nampa Welcome Sign" loading="lazy" height="800">
                 <p>Nampa Welcome sign</p>
-                <img src=" images/nampa-depot.webp" alt="Nampa Train Depot" loading="lazy" height="800px">
+                <img src=" images/nampa-depot.webp" alt="Nampa Train Depot" loading="lazy" height="800">
                 <p>Nampa Train Depot</p>
-                <img src="images/nampa-arcade.webp" alt="Jeremy's Downtown Arcade" loading="lazy" height="800px">
+                <img src="images/nampa-arcade.webp" alt="Jeremy's Downtown Arcade" loading="lazy" height="800">
                 <p>Jeremy's Downtown Arcade</p>
-                <img src="images/reel-theater.webp" alt="Reel Theather" loading="lazy" height="800px">
+                <img src="images/reel-theater.webp" alt="Reel Theather" loading="lazy" height="800">
                 <p>Reel Theather</p>
-                <img src="images/roaring-springs.webp" alt="Roaring Springs" loading="lazy" height="800px">
+                <img src="images/roaring-springs.webp" alt="Roaring Springs" loading="lazy" height="800">
                 <p>Roaring Springs</p>
-                <img src="images/wahooz.webp" alt="Wahooz" loading="lazy" height="800px">
+                <img src="images/wahooz.webp" alt="Wahooz" loading="lazy" height="800">
                 <p>Wahooz</p>
             </div>
         </div>
