--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -21,7 +21,7 @@
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
-            <a href="contact.html">Contact</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
     <main>
