Adding to reservation table

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -26,25 +26,6 @@
     </header>
     <main>
         <table>
-            <thead>
-                <tr>
-                    <th>Max Rental Pricing</th>
-                </tr>
-                <tr>
-                    <th aria-label="Empty Cell"></th>
-                    <th>Reservation</th>
-                    <th>Walk-In</th>
-                </tr>
-                <tr>
-                    <th>Rental Type</th>
-                    <th>Max. Persons</th>
-                    <th>Half Day (3 hrs)</th>
-                    <th></th>
-                </tr>
-
-            </thead>
-        </table>
-        <table>
             <tr>
                 <th>With Reservation</th>
             </tr>
@@ -96,6 +77,7 @@
         </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
+    <script src="scripts/rental-pricing.js"></script>
 </body>
 
 </html>
