Added code to rental-pricing

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -35,6 +35,9 @@
                 <th>Half Day (3 hrs)</th>
                 <th>Full Day</th>
             </tr>
+            <tr>
+                <tbody></tbody>
+            </tr>
         </table>
         <table>
             <tr>
