Added content to rental tables

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -26,29 +26,32 @@
     </header>
     <main>
         <table>
-            <tr>
-                <th>With Reservation</th>
-            </tr>
-            <tr>
-                <th>Rental Type</th>
-                <th>Max. Persons</th>
-                <th>Half Day (3 hrs)</th>
-                <th>Full Day</th>
-            </tr>
-            <tr>
-                <tbody></tbody>
-            </tr>
+            <thead>
+                <tr>
+                    <th colspan="4">With Reservation</th>
+                </tr>
+                <tr>
+                    <th>Rental Type</th>
+                    <th>Max. Persons</th>
+                    <th>Half Day (3 hrs)</th>
+                    <th>Full Day</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
         </table>
         <table>
-            <tr>
-                <th>Walk-In</th>
-            </tr>
-            <tr>
-                <th>Rental Type</th>
-                <th>Max. Persons</th>
-                <th>Half Day (3 hrs)</th>
-                <th>Full Day</th>
-            </tr>
+            <thead>
+                <tr>
+                    <th colspan="4">Walk-In</th>
+                </tr>
+                <tr>
+                    <th>Rental Type</th>
+                    <th>Max. Persons</th>
+                    <th>Half Day (3 hrs)</th>
+                    <th>Full Day</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
         </table>
 
         <h2>Rental Services and Agreements</h2>
