--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -70,6 +70,8 @@
     </main>
     <footer>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
+        <p class="current-year"></p>
+        <p class="last-modified"></p>
         <div class="media-icons">
             <a href="https://www.facebook.com/" target="_blank">
                 <img id="facebook" src="images/facebook.webp" alt="Facebook Logo">
@@ -84,6 +86,7 @@
     </footer>
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/rental-pricing.js"></script>
+    <script src="scripts/getdates.js"></script>
 </body>
 
 </html>
