--- a/scoots/index.html
+++ b/scoots/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <div id="banner">temp-max</div>
+    <div class="banner"></div>
+    <div id="banner">
+        <h3 id="max-temp"></h3>
+        <button id="bannerButton"></button>
+    </div>
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
         <h1>Scoots</h1>
@@ -33,10 +37,14 @@
             </picture>
             <a id="action" class="btn" href="reservations.html">Make a Reservation</a>
         </div>
-        <p>Temperature</p>
-        <p>Humidity</p>
+        <h2>Weather in Cozumel</h2>
+        <p id="current-temp"></p>
+        <p id="weather-main"></p>
+        <p id="weather-desc"></p>
+        <img id="weather-icon">
+        <p id="humidity"></p>
+        <p id="next-day-temp"></p>
         <p>Next Day Forecast</p>
-        <p>Title, description, weather icon</p>
     </main>
     <footer>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
@@ -53,6 +61,8 @@
         </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
+    <script src="scripts/weather.js"></script>
+    <script src="scripts/getdates..js"></script>
 </body>
 
 </html>
