--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -75,6 +75,7 @@
         </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
+    <script src="scripts/getdates..js"></script>
 </body>
 
 </html>
