--- a/scoots/attributions.html
+++ b/scoots/attributions.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    </div>
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
         <button class="menu" aria-label="Menu"></button>
@@ -20,32 +21,11 @@
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main>
-        <form id="contact" method="get" action="thank-you.html">
-            <fieldset id="user-info">
-                <legend>Contact Us</legend>
-                <label for="name">Name</label><br>
-                <input type="text" id="fname" name="fname" required><br>
-                <label for="email">Email</label><br>
-                <input type="email" id="email" name="email" placeholder="youremail@gmail.com" required><br>
-                <label>Comment<br>
-                    <textarea id="comments" name="comments"></textarea>
-                </label>
-            </fieldset>
-        </form>
-        <p>If you'd rather reach out to us directly, you can use one of the following option:</p>
-        <ul>
-            <li>Call us at (987)123-4567</li>
-            <li>Email us at info@scootsrentals.com</li>
-            <p>or come visit us at one of our two locations:</p>
-            <li>123 Scooter Lane, Playa del Carmen, Q.R., Mexico</li>
-            <li>456 Scooter Road, Cozumel, Q.R., Mexico</li>
-        </ul>
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1jl9UyfL8sdaZMs_RCvB67tklcVspvjc&ehbc=2E312F"
-            width="640" height="480" loading="lazy"></iframe>
+
     </main>
     <footer>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
@@ -68,6 +48,7 @@
         <a src="attributions.html">Attributions</a>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
+    <script src="scripts/weather.js"></script>
     <script src="scripts/footer-dates.js"></script>
 </body>
 
