--- a/scoots/index.html
+++ b/scoots/index.html
@@ -13,14 +13,12 @@
 </head>
 
 <body>
-    <div class="banner"></div>
     <div id="banner">
         <h3 id="max-temp"></h3>
         <button id="bannerButton"></button>
     </div>
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
-        <h1>Scoots</h1>
         <button class="menu" aria-label="Menu"></button>
         <nav>
             <a href="#">Home</a>
@@ -35,8 +33,27 @@
                 <source srcset="images/hero-image-small.webp" media="(max-width: 800px)">
                 <img src="images/hero-image.webp" alt="Cozumel Scenery">
             </picture>
-            <a id="action" class="btn" href="reservations.html">Make a Reservation</a>
+            <h1>Discover Your Next Adventure</h1>
+            <a id="action" class="hero-button" href="reservations.html">Make a Reservation</a>
         </div>
+        <h2>Make the Most of Cozumel</h2>
+        <p>Let Scoots enhance your Cozumel experience with our reliable and diverse rental options. Embrace the island's
+            beauty and create unforgettable memories with ease. Reserve your vehicle today and embark on your perfect
+            adventure.</p>
+        <h2>Rental Options for Every Adventure</h2>
+        <h3>Honda Motor Scooters:</h3>
+        <p>Choose from our range of scooters for solo or two-person rides, perfect for exploring the island.</p>
+        <h3>Side-by-Side ATVs:</h3>
+        <p>Great for adventurous groups, our ATVs are built for rugged trails and exciting off-road experiences.</p>
+        <h3>Jeeps:</h3>
+        <p>Enjoy a comfortable drive with our versatile Jeeps, available in both enclosed and open-air options.</p>
+        <h2>Convenient Vehicle Delivery</h2>
+        <p>To make your experience even easier, we provide free delivery to your Cozumel hotel or rental property for
+            bookings of two days or more. We’ll deliver your vehicle right to you, letting you start your adventure with
+            ease.</p>
+        <h2>Easy Payment Options</h2>
+        <p>Booking is simple with our range of payment options including Google Pay, Apple Pay, cash, credit, debit, and
+            Venmo. Choose the method that works best for you and enjoy a smooth transaction.</p>
         <h2>Weather in Cozumel</h2>
         <p id="current-temp"></p>
         <p id="weather-main"></p>
@@ -48,6 +65,11 @@
     </main>
     <footer>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
+        <p>Headquarters: Calle 35 Sur, Cozumel Turistico, 77670 Cozumel, Q.R., Mexico</p>
+        <p>Phone: (987)123-4567</p>
+        <p>Email: info@scootsrentals.com</p>
+        <p class="current-year"></p>
+        <p class="last-modified"></p>
         <div class="media-icons">
             <a href="https://www.facebook.com/" target="_blank">
                 <img id="facebook" src="images/facebook.webp" alt="Facebook Logo">
@@ -59,10 +81,11 @@
                 <img id="twitter" src="images/twitter.webp" alt="Twitter Logo">
             </a>
         </div>
+        <a src="attributions.html">Attributions</a>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/weather.js"></script>
-    <script src="scripts/getdates..js"></script>
+    <script src="scripts/footer-dates.js"></script>
 </body>
 
 </html>
