--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -15,7 +15,6 @@
 <body>
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
-        <h1>Scoots</h1>
         <button class="menu" aria-label="Menu"></button>
         <nav>
             <a href="index.html">Home</a>
@@ -70,6 +69,9 @@
     </main>
     <footer>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
+        <p>Headquarters: Calle 35 Sur, Cozumel Turistico, 77670 Cozumel, Q.R., Mexico</p>
+        <p>Phone: (987)123-4567</p>
+        <p>Email: info@scootsrentals.com</p>
         <p class="current-year"></p>
         <p class="last-modified"></p>
         <div class="media-icons">
@@ -83,10 +85,11 @@
                 <img id="twitter" src="images/twitter.webp" alt="Twitter Logo">
             </a>
         </div>
+        <a src="attributions.html">Attributions</a>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/rental-pricing.js"></script>
-    <script src="scripts/getdates.js"></script>
+    <script src="scripts/footer-dates.js"></script>
 </body>
 
 </html>
