--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -16,7 +16,6 @@
 <body>
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
-        <h1>Scoots</h1>
         <button class="menu" aria-label="Menu"></button>
         <nav>
             <a href="index.html">Home</a>
@@ -26,7 +25,7 @@
         </nav>
     </header>
     <main>
-        <form id="reserve" method="get" action="thankyou.html">
+        <form id="reserve" method="get" action="thank-you.html">
             <fieldset id="user-info">
                 <legend>Personal Info</legend>
                 <label for="fname">First Name:</label><br>
@@ -60,8 +59,12 @@
         </form>
     </main>
     <footer>
-
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
+        <p>Headquarters: Calle 35 Sur, Cozumel Turistico, 77670 Cozumel, Q.R., Mexico</p>
+        <p>Phone: (987)123-4567</p>
+        <p>Email: info@scootsrentals.com</p>
+        <p class="current-year"></p>
+        <p class="last-modified"></p>
         <div class="media-icons">
             <a href="https://www.facebook.com/" target="_blank">
                 <img id="facebook" src="images/facebook.webp" alt="Facebook Logo">
@@ -73,9 +76,10 @@
                 <img id="twitter" src="images/twitter.webp" alt="Twitter Logo">
             </a>
         </div>
+        <a src="attributions.html">Attributions</a>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
-    <script src="scripts/getdates..js"></script>
+    <script src="scripts/footer-dates.js"></script>
 </body>
 
 </html>
