Added styling to home page and header/footer

--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -49,23 +49,24 @@
     </main>
     <footer>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
-        <p>Headquarters: Calle 35 Sur, Cozumel Turistico, 77670 Cozumel, Q.R., Mexico</p>
-        <p>Phone: (987)123-4567</p>
-        <p>Email: info@scootsrentals.com</p>
-        <p class="current-year"></p>
-        <p class="last-modified"></p>
-        <div class="media-icons">
-            <a href="https://www.facebook.com/" target="_blank">
-                <img id="facebook" src="images/facebook.webp" alt="Facebook Logo">
-            </a>
-            <a href="https://www.instagram.com/" target="_blank">
-                <img id="instagram" src="images/instagram.webp" alt="Instagram Logo">
-            </a>
-            <a href="https://www.twitter.com/" target="_blank">
-                <img id="twitter" src="images/twitter.webp" alt="Twitter Logo">
-            </a>
+        <div class="footer-contact">
+            <p>Headquarters: Calle 35 Sur, Cozumel Turistico, 77670 Cozumel, Q.R., Mexico</p>
+            <p>Phone: (987)123-4567</p>
+            <p>Email: info@scoots.com</p>
+            <div class="social-media">
+                <a href="https://www.facebook.com" target="_blank"><img id="facebook" src="images/facebook.webp"
+                        alt="Facebook logo"></a>
+                <a href="https://www.instagram.com" target="_blank"><img id="instagram" src="images/instagram.webp"
+                        alt="Instagram logo"></a>
+                <a href="https://www.twitter.com" target="_blank"><img id="twitter" src="images/twitter.webp"
+                        alt="Twitter logo"></a>
+            </div>
         </div>
-        <a src="attributions.html">Attributions</a>
+        <div class="site-details">
+            <p class="current-year"></p>
+            <p class="last-modified"></p>
+            <a src="attributions.html">Attributions</a>
+        </div>
     </footer>
     <script src="scripts/responsive-menu.js"></script>
     <script src="scripts/footer-dates.js"></script>
