Stylled rental page in mobile view

--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/larger.css">
 </head>
 
-<body>
+<body id="reservations">
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
         <button class="menu" aria-label="Menu"></button>
@@ -28,30 +28,30 @@
         <form id="reserve" method="get" action="thank-you.html">
             <fieldset id="user-info">
                 <legend>Personal Info</legend>
-                <label for="fname">First Name:</label><br>
+                <label for="fname">First Name</label><br>
                 <input type="text" id="fname" name="fname" required><br>
-                <label for="lname">Last name:</label><br>
+                <label for="lname">Last name</label><br>
                 <input type="text" id="lname" name="lname" required><br>
-                <label for="email">Email:</label><br>
+                <label for="email">Email</label><br>
                 <input type="email" id="email" name="email" placeholder="youremail@gmail.com" required><br>
-                <label for="phone">Phone Number:</label><br>
+                <label for="phone">Phone Number</label><br>
                 <input type="tel" id="phone" name="phone" required><br>
-                <label for="state-country">Home State/Country:</label><br>
+                <label for="state-country">Home State/Country</label><br>
                 <input type="text" id="state-country" name="state-country" required><br>
             </fieldset>
             <fieldset id="rental-info">
                 <legend>Rental Info</legend>
-                <label for="start-date">Start Date:</label><br>
+                <label for="start-date">Start Date</label><br>
                 <input type="date" id="start-date" name="start-date" required><br>
-                <label for="end-date">End Date:</label><br>
+                <label for="end-date">End Date</label><br>
                 <input type="date" id="end-date" name="end-date" required><br>
-                <label for="period">Period:</label><br>
+                <label for="period">Period</label><br>
                 <input type="text" id="period" name="period" required><br>
-                <label for="rental-type">Rental Type:</label><br>
+                <label for="rental-type">Rental Type</label><br>
                 <input type="text" id="rental-type" name="rental-type" required><br>
-                <label for="cruise-line">Cruise Line (If Applicable):</label><br>
+                <label for="cruise-line">Cruise Line (If Applicable)</label><br>
                 <input type="text" id="cruise-line" name="cruise-line" required><br>
-                <label>Additional Comments:<br>
+                <label>Additional Comments<br>
                     <textarea id="comments" name="comments"></textarea>
                 </label>
             </fieldset>
