--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/larger.css">
 </head>
 
-<body>
+<body id="rentals">
     <header>
         <img class="logo" src="images/scoots.webp" alt="Scoots Logo">
         <button class="menu" aria-label="Menu"></button>
